--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@heroicons/react": "^2.0.18",
     "@mui/material": "^5.13.4",
     "apexcharts": "^3.37.0",
+    "js-cookie": "^3.0.5",
     "jsvectormap": "^1.5.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
