--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.8.1",
+    "react-signature-canvas": "^1.0.6",
     "sort-by": "^0.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.9",
     "@types/react-dom": "^18.0.10",
+    "@types/react-signature-canvas": "^1.0.2",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
     "file-loader": "^6.2.0",
